tdf#150712: Format->Conditional->Condition 100% CPU

Flamegraph showed this part, see:
https://bugs.documentfoundation.org/attachment.cgi?id=182121

Change-Id: Id14ea4f95d8912847f77eed561b14d3edee2f67f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139152
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>